chore: update swagger defs
